tests/snapshots/render_dashboard__card_stats_001_wide_card_places_full_stats_in_bottom_right_border.snap
---
source: tests/render_dashboard.rs
assertion_line: 227
expression: rendered
---
┌ 1 ClaudeCode · api-svc ────────────────────────────────────────── ● Thinking ┐
│Dir:  api-svc                                                                 │
│Prmt: move the stats into the border                                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└───────────────────────────────────────────────────────── Last: 1h  Tools: 14 ┘
