tests/snapshots/render_dashboard__pane_004_card_title_row.snap
---
source: tests/render_dashboard.rs
expression: buffer_to_text(&buffer)
---
┌ 1 ClaudeCode · example-coder ───────────────────────────────────── ● Working ┐
│Dir:  example-project                                                         │
│Prmt: fix the login bug                                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└────────────────────────────────────────────────────────── Last: 0s  Tools: 7 ┘
