tests/snapshots/render_dashboard__pane_008_named_agent_badges.snap
---
source: tests/render_dashboard.rs
expression: named_badges
---
== ClaudeCode / friendly-claude ==
[Blue/Reset]"┌" [Reset/Reset]" 1 " [LightMagenta/Reset]"ClaudeCode" [Reset/Reset]" · friendly-claude " [Blue/Reset]"────────────────────────────────── ● Thinking ┐"
[Blue/Reset]"│" [Reset/Reset]"Dir:  workspace                                                               " [Blue/Reset]"│"
[Blue/Reset]"│" [Reset/Reset]"Prmt: inspect the repository                                                  " [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"└──────────────────────────────────────────────────────────" [Reset/Reset]" Last: 0s  Tools: 0 " [Blue/Reset]"┘"
== OpenCode / friendly-opencode ==
[Blue/Reset]"┌" [Reset/Reset]" 1 " [LightGreen/Reset]"OpenCode" [Reset/Reset]" · friendly-opencode " [Blue/Reset]"────────────────────────────────── ● Thinking ┐"
[Blue/Reset]"│" [Reset/Reset]"Dir:  workspace                                                               " [Blue/Reset]"│"
[Blue/Reset]"│" [Reset/Reset]"Prmt: inspect the repository                                                  " [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"└──────────────────────────────────────────────────────────" [Reset/Reset]" Last: 0s  Tools: 0 " [Blue/Reset]"┘"
== Pi / friendly-pi ==
[Blue/Reset]"┌" [Reset/Reset]" 1 " [LightCyan/Reset]"Pi" [Reset/Reset]" · friendly-pi " [Blue/Reset]"────────────────────────────────────────────── ● Thinking ┐"
[Blue/Reset]"│" [Reset/Reset]"Dir:  workspace                                                               " [Blue/Reset]"│"
[Blue/Reset]"│" [Reset/Reset]"Prmt: inspect the repository                                                  " [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"└──────────────────────────────────────────────────────────" [Reset/Reset]" Last: 0s  Tools: 0 " [Blue/Reset]"┘"
== Codex / friendly-codex ==
[Blue/Reset]"┌" [Reset/Reset]" 1 " [LightYellow/Reset]"Codex" [Reset/Reset]" · friendly-codex " [Blue/Reset]"──────────────────────────────────────── ● Thinking ┐"
[Blue/Reset]"│" [Reset/Reset]"Dir:  workspace                                                               " [Blue/Reset]"│"
[Blue/Reset]"│" [Reset/Reset]"Prmt: inspect the repository                                                  " [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"└──────────────────────────────────────────────────────────" [Reset/Reset]" Last: 0s  Tools: 0 " [Blue/Reset]"┘"
